src/dv_flow/mgr/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> ID LPAREN RPAREN
Rule 2     expression -> ID LPAREN args RPAREN
Rule 3     args -> expression
Rule 4     args -> args COMMA expression
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression MINUS expression
Rule 7     expression -> expression TIMES expression
Rule 8     expression -> expression PIPE expression
Rule 9     expression -> expression DIVIDE expression
Rule 10    expression -> expression EQ expression
Rule 11    expression -> expression NE expression
Rule 12    expression -> expression LT expression
Rule 13    expression -> expression LE expression
Rule 14    expression -> expression GT expression
Rule 15    expression -> expression GE expression
Rule 16    expression -> expression AND expression
Rule 17    expression -> expression OR expression
Rule 18    expression -> NOT expression
Rule 19    expression -> expression LBRACKET expression RBRACKET
Rule 20    expression -> expression LBRACKET RBRACKET
Rule 21    expression -> expression LBRACKET expression COLON expression RBRACKET
Rule 22    expression -> expression LBRACKET COLON expression RBRACKET
Rule 23    expression -> expression LBRACKET expression COLON RBRACKET
Rule 24    expression -> LPAREN expression RPAREN
Rule 25    expression -> NUMBER
Rule 26    expression -> ID
Rule 27    expression -> hier_id
Rule 28    hier_id -> ID DOT hier_id
Rule 29    hier_id -> ID
Rule 30    expression -> STRING1
Rule 31    expression -> STRING2
Rule 32    expression -> DOLLAR ID

Terminals, with rules where they appear

AND                  : 16
COLON                : 21 22 23
COMMA                : 4
DIVIDE               : 9
DOLLAR               : 32
DOT                  : 28
EQ                   : 10
GE                   : 15
GT                   : 14
ID                   : 1 2 26 28 29 32
LBRACKET             : 19 20 21 22 23
LE                   : 13
LPAREN               : 1 2 24
LT                   : 12
MINUS                : 6
NE                   : 11
NOT                  : 18
NUMBER               : 25
OR                   : 17
PIPE                 : 8
PLUS                 : 5
RBRACKET             : 19 20 21 22 23
RPAREN               : 1 2 24
STRING1              : 30
STRING2              : 31
TIMES                : 7
error                : 

Nonterminals, with rules where they appear

args                 : 2 4
expression           : 3 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 19 19 20 21 21 21 22 22 23 23 24 0
hier_id              : 27 28

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 1
    hier_id                        shift and go to state 6

state 1

    (0) S' -> expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . PIPE expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . EQ expression
    (11) expression -> expression . NE expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . LE expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . GE expression
    (16) expression -> expression . AND expression
    (17) expression -> expression . OR expression
    (19) expression -> expression . LBRACKET expression RBRACKET
    (20) expression -> expression . LBRACKET RBRACKET
    (21) expression -> expression . LBRACKET expression COLON expression RBRACKET
    (22) expression -> expression . LBRACKET COLON expression RBRACKET
    (23) expression -> expression . LBRACKET expression COLON RBRACKET

    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    TIMES           shift and go to state 12
    PIPE            shift and go to state 13
    DIVIDE          shift and go to state 14
    EQ              shift and go to state 15
    NE              shift and go to state 16
    LT              shift and go to state 17
    LE              shift and go to state 18
    GT              shift and go to state 19
    GE              shift and go to state 20
    AND             shift and go to state 21
    OR              shift and go to state 22
    LBRACKET        shift and go to state 23


state 2

    (1) expression -> ID . LPAREN RPAREN
    (2) expression -> ID . LPAREN args RPAREN
    (26) expression -> ID .
    (28) hier_id -> ID . DOT hier_id
    (29) hier_id -> ID .

  ! reduce/reduce conflict for PLUS resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for MINUS resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for TIMES resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for PIPE resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for EQ resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for NE resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for LT resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for LE resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for GT resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for GE resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for AND resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for OR resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for LBRACKET resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for $end resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for RPAREN resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for COLON resolved using rule 26 (expression -> ID .)
  ! reduce/reduce conflict for COMMA resolved using rule 26 (expression -> ID .)
    LPAREN          shift and go to state 24
    PLUS            reduce using rule 26 (expression -> ID .)
    MINUS           reduce using rule 26 (expression -> ID .)
    TIMES           reduce using rule 26 (expression -> ID .)
    PIPE            reduce using rule 26 (expression -> ID .)
    DIVIDE          reduce using rule 26 (expression -> ID .)
    EQ              reduce using rule 26 (expression -> ID .)
    NE              reduce using rule 26 (expression -> ID .)
    LT              reduce using rule 26 (expression -> ID .)
    LE              reduce using rule 26 (expression -> ID .)
    GT              reduce using rule 26 (expression -> ID .)
    GE              reduce using rule 26 (expression -> ID .)
    AND             reduce using rule 26 (expression -> ID .)
    OR              reduce using rule 26 (expression -> ID .)
    LBRACKET        reduce using rule 26 (expression -> ID .)
    $end            reduce using rule 26 (expression -> ID .)
    RPAREN          reduce using rule 26 (expression -> ID .)
    RBRACKET        reduce using rule 26 (expression -> ID .)
    COLON           reduce using rule 26 (expression -> ID .)
    COMMA           reduce using rule 26 (expression -> ID .)
    DOT             shift and go to state 25

  ! PLUS            [ reduce using rule 29 (hier_id -> ID .) ]
  ! MINUS           [ reduce using rule 29 (hier_id -> ID .) ]
  ! TIMES           [ reduce using rule 29 (hier_id -> ID .) ]
  ! PIPE            [ reduce using rule 29 (hier_id -> ID .) ]
  ! DIVIDE          [ reduce using rule 29 (hier_id -> ID .) ]
  ! EQ              [ reduce using rule 29 (hier_id -> ID .) ]
  ! NE              [ reduce using rule 29 (hier_id -> ID .) ]
  ! LT              [ reduce using rule 29 (hier_id -> ID .) ]
  ! LE              [ reduce using rule 29 (hier_id -> ID .) ]
  ! GT              [ reduce using rule 29 (hier_id -> ID .) ]
  ! GE              [ reduce using rule 29 (hier_id -> ID .) ]
  ! AND             [ reduce using rule 29 (hier_id -> ID .) ]
  ! OR              [ reduce using rule 29 (hier_id -> ID .) ]
  ! LBRACKET        [ reduce using rule 29 (hier_id -> ID .) ]
  ! $end            [ reduce using rule 29 (hier_id -> ID .) ]
  ! RPAREN          [ reduce using rule 29 (hier_id -> ID .) ]
  ! RBRACKET        [ reduce using rule 29 (hier_id -> ID .) ]
  ! COLON           [ reduce using rule 29 (hier_id -> ID .) ]
  ! COMMA           [ reduce using rule 29 (hier_id -> ID .) ]


state 3

    (24) expression -> LPAREN . expression RPAREN
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 26
    hier_id                        shift and go to state 6

state 4

    (18) expression -> NOT . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 27
    hier_id                        shift and go to state 6

state 5

    (25) expression -> NUMBER .

    PLUS            reduce using rule 25 (expression -> NUMBER .)
    MINUS           reduce using rule 25 (expression -> NUMBER .)
    TIMES           reduce using rule 25 (expression -> NUMBER .)
    PIPE            reduce using rule 25 (expression -> NUMBER .)
    DIVIDE          reduce using rule 25 (expression -> NUMBER .)
    EQ              reduce using rule 25 (expression -> NUMBER .)
    NE              reduce using rule 25 (expression -> NUMBER .)
    LT              reduce using rule 25 (expression -> NUMBER .)
    LE              reduce using rule 25 (expression -> NUMBER .)
    GT              reduce using rule 25 (expression -> NUMBER .)
    GE              reduce using rule 25 (expression -> NUMBER .)
    AND             reduce using rule 25 (expression -> NUMBER .)
    OR              reduce using rule 25 (expression -> NUMBER .)
    LBRACKET        reduce using rule 25 (expression -> NUMBER .)
    $end            reduce using rule 25 (expression -> NUMBER .)
    RPAREN          reduce using rule 25 (expression -> NUMBER .)
    RBRACKET        reduce using rule 25 (expression -> NUMBER .)
    COLON           reduce using rule 25 (expression -> NUMBER .)
    COMMA           reduce using rule 25 (expression -> NUMBER .)


state 6

    (27) expression -> hier_id .

    PLUS            reduce using rule 27 (expression -> hier_id .)
    MINUS           reduce using rule 27 (expression -> hier_id .)
    TIMES           reduce using rule 27 (expression -> hier_id .)
    PIPE            reduce using rule 27 (expression -> hier_id .)
    DIVIDE          reduce using rule 27 (expression -> hier_id .)
    EQ              reduce using rule 27 (expression -> hier_id .)
    NE              reduce using rule 27 (expression -> hier_id .)
    LT              reduce using rule 27 (expression -> hier_id .)
    LE              reduce using rule 27 (expression -> hier_id .)
    GT              reduce using rule 27 (expression -> hier_id .)
    GE              reduce using rule 27 (expression -> hier_id .)
    AND             reduce using rule 27 (expression -> hier_id .)
    OR              reduce using rule 27 (expression -> hier_id .)
    LBRACKET        reduce using rule 27 (expression -> hier_id .)
    $end            reduce using rule 27 (expression -> hier_id .)
    RPAREN          reduce using rule 27 (expression -> hier_id .)
    RBRACKET        reduce using rule 27 (expression -> hier_id .)
    COLON           reduce using rule 27 (expression -> hier_id .)
    COMMA           reduce using rule 27 (expression -> hier_id .)


state 7

    (30) expression -> STRING1 .

    PLUS            reduce using rule 30 (expression -> STRING1 .)
    MINUS           reduce using rule 30 (expression -> STRING1 .)
    TIMES           reduce using rule 30 (expression -> STRING1 .)
    PIPE            reduce using rule 30 (expression -> STRING1 .)
    DIVIDE          reduce using rule 30 (expression -> STRING1 .)
    EQ              reduce using rule 30 (expression -> STRING1 .)
    NE              reduce using rule 30 (expression -> STRING1 .)
    LT              reduce using rule 30 (expression -> STRING1 .)
    LE              reduce using rule 30 (expression -> STRING1 .)
    GT              reduce using rule 30 (expression -> STRING1 .)
    GE              reduce using rule 30 (expression -> STRING1 .)
    AND             reduce using rule 30 (expression -> STRING1 .)
    OR              reduce using rule 30 (expression -> STRING1 .)
    LBRACKET        reduce using rule 30 (expression -> STRING1 .)
    $end            reduce using rule 30 (expression -> STRING1 .)
    RPAREN          reduce using rule 30 (expression -> STRING1 .)
    RBRACKET        reduce using rule 30 (expression -> STRING1 .)
    COLON           reduce using rule 30 (expression -> STRING1 .)
    COMMA           reduce using rule 30 (expression -> STRING1 .)


state 8

    (31) expression -> STRING2 .

    PLUS            reduce using rule 31 (expression -> STRING2 .)
    MINUS           reduce using rule 31 (expression -> STRING2 .)
    TIMES           reduce using rule 31 (expression -> STRING2 .)
    PIPE            reduce using rule 31 (expression -> STRING2 .)
    DIVIDE          reduce using rule 31 (expression -> STRING2 .)
    EQ              reduce using rule 31 (expression -> STRING2 .)
    NE              reduce using rule 31 (expression -> STRING2 .)
    LT              reduce using rule 31 (expression -> STRING2 .)
    LE              reduce using rule 31 (expression -> STRING2 .)
    GT              reduce using rule 31 (expression -> STRING2 .)
    GE              reduce using rule 31 (expression -> STRING2 .)
    AND             reduce using rule 31 (expression -> STRING2 .)
    OR              reduce using rule 31 (expression -> STRING2 .)
    LBRACKET        reduce using rule 31 (expression -> STRING2 .)
    $end            reduce using rule 31 (expression -> STRING2 .)
    RPAREN          reduce using rule 31 (expression -> STRING2 .)
    RBRACKET        reduce using rule 31 (expression -> STRING2 .)
    COLON           reduce using rule 31 (expression -> STRING2 .)
    COMMA           reduce using rule 31 (expression -> STRING2 .)


state 9

    (32) expression -> DOLLAR . ID

    ID              shift and go to state 28


state 10

    (5) expression -> expression PLUS . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 29
    hier_id                        shift and go to state 6

state 11

    (6) expression -> expression MINUS . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 30
    hier_id                        shift and go to state 6

state 12

    (7) expression -> expression TIMES . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 31
    hier_id                        shift and go to state 6

state 13

    (8) expression -> expression PIPE . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 32
    hier_id                        shift and go to state 6

state 14

    (9) expression -> expression DIVIDE . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 33
    hier_id                        shift and go to state 6

state 15

    (10) expression -> expression EQ . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 34
    hier_id                        shift and go to state 6

state 16

    (11) expression -> expression NE . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 35
    hier_id                        shift and go to state 6

state 17

    (12) expression -> expression LT . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 36
    hier_id                        shift and go to state 6

state 18

    (13) expression -> expression LE . expression
    (1) expression -> . ID LPAREN RPAREN
    (2) expression -> . ID LPAREN args RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression PIPE expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NE expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression LE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . NOT expression
    (19) expression -> . expression LBRACKET expression RBRACKET
    (20) expression -> . expression LBRACKET RBRACKET
    (21) expression -> . expression LBRACKET expression COLON expression RBRACKET
    (22) expression -> . expression LBRACKET COLON expression RBRACKET
    (23) expression -> . expression LBRACKET expression COLON RBRACKET
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID
    (27) expression -> . hier_id
    (30) expression -> . STRING1
    (31) expression -> . STRING2
    (32) expression -> . DOLLAR ID
    (28) hier_id -> . ID DOT hier_id
    (29) hier_id -> . ID

    ID              shift and go to state 2
    NOT             shift and go to state 4
    LPAREN          shift and go to state 3
    NUMBER          shift and go to state 5
    STRING1         shift and go to state 7
    STRING2         shift and go to state 8
    DOLLAR          shift and go to state 9

    expression                     shift and go to state 37
    hier_id                        shift and go to state 6

state 19
